apps/mlflow/tracking/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  selector:
    app.kubernetes.io/part-of: mlflow
    app.kubernetes.io/component: tracking
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
