apps/mlflow/tracking/base/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlflow-app
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
              - cluster.local/ns/kubeflow/sa/centraldashboard
  selector:
    matchLabels:
      app.kubernetes.io/part-of: mlflow
      app.kubernetes.io/component: tracking
